# lpc-code

./: .gitignore  README.md  implementation-steps.md  pyproject.toml
config/: default.yaml
config/skills/: analyze_python.yaml  list_project.yaml
docs/: python-syntax-guide.md
docs/superpowers/specs/: 2026-04-27-local-agent-framework-design.md
src/agent/: __init__.py  __main__.py
src/agent/cli/: interface.py
src/agent/core/: __init__.py  loop.py  state.py
src/agent/memory/: long_term.py  short_term.py
src/agent/model/: __init__.py  chat.py  loader.py  prompt.py
src/agent/multimodal/: __init__.py  image.py  pdf.py
src/agent/tools/: __init__.py  base.py  code_exec.py  data_query.py  filesystem.py  registry.py  shell.py  skill.py  vector_search.py  web_request.py
tests/: test_basic.py  test_units.py
